# ros-tutorial-robot-control-vision

./: README.md  README_full.md
irobot_vision_tutorial/: CMakeLists.txt  package.xml
irobot_vision_tutorial/scripts/: ball_tracking1.py  detect_face.py  rotate_robot.py  y_coordinate.py
