<?xml version="1.0"?>
<package format="2">
  <name>irobot_vision_tutorial</name>
  <version>0.1.0</version>
  <description>The irobot_vision_tutorial package for the Purdue SMART lab ROS tutorial on controlling iRobot create2 based on keyboard and vision-based approaches such as face detection and colored object detection </description>

  <maintainer email="ramviyas@purdue.edu">Ramviyas Parasurman</maintainer>
  <license>MIT</license>
  <author email="lee1424@purdue.edu">Shaocheng Luo</author>
  <author email="tmina@purdue.edu">Arabinda Samantaray</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
